--- a/MyDrive/Web.config
+++ b/MyDrive/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MyDrive-20151102060803.mdf;Initial Catalog=aspnet-MyDrive-20151102060803;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=CONDEV;initial catalog=MyDrive;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DBContainer" connectionString="metadata=res://*/EFModels.DrivingDB.csdl|res://*/EFModels.DrivingDB.ssdl|res://*/EFModels.DrivingDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CONDEV;initial catalog=MyDrive;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
